test/classes/initializers/phase1/badDependence.good
badDependence.chpl:7: In initializer:
badDependence.chpl:8: error: Field used before it is initialized
